fixed table align issues - done except bonus styling

--- a/src/components/ContactSelection.css
+++ b/src/components/ContactSelection.css
@@ -1,13 +1,16 @@
-.selection table {
-    margin-left: auto;
-    margin-right: auto;
+.button {
+    background-color: #B7D5DC;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
 
-.selection td {
-    border: 1px solid #000000;
-    min-width: 150px;
-    text-align: center;
-    justify-content: center;
+.selection table {
+    table-layout:fixed;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .selection img {
